{
    "name": "GameplayKeyboardActions",
    "maps": [
        {
            "name": "Player",
            "id": "faeadbf6-38ee-41b6-8dd8-12ed9ec00831",
            "actions": [
                {
                    "name": "Switch Head",
                    "type": "Button",
                    "id": "d640e934-b632-4578-9508-4cdd528e51b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Switch Chest",
                    "type": "Button",
                    "id": "88f95713-ea41-45c3-a7e7-35016fb2c44b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Switch Legs",
                    "type": "Button",
                    "id": "94bea811-4f42-4b23-9c23-680cd3880dcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "4452ea4d-7285-4130-ac78-a0da06a01855",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "52151b75-a908-45b8-bdb8-b2d5bcc45f90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectNorthTool",
                    "type": "Button",
                    "id": "dffb0856-cbca-4fbf-8309-68ed3001affc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectSouthTool",
                    "type": "Button",
                    "id": "0b9f1a1e-5fec-4cdd-a426-4bf9ef169abb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectEastTool",
                    "type": "Button",
                    "id": "ba1d8919-dbdf-4505-af6a-52afd0655168",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectWestTool",
                    "type": "Button",
                    "id": "f0300356-6fc4-4067-8617-99a8f33ad4a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectNorthEastTool",
                    "type": "Button",
                    "id": "1ef2397d-a96b-4770-938e-bbe0b50c56ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectNorthWestTool",
                    "type": "Button",
                    "id": "912ec9d9-18c7-4a03-b355-8bbe9c105450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectSouthEastTool",
                    "type": "Button",
                    "id": "434268a5-81bd-4472-87df-277aae320a10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectSouthWestTool",
                    "type": "Button",
                    "id": "dcb66579-c105-4ec8-b91a-c4a57a45ba45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "cbe4a91e-f15b-4fdb-95c5-c478dae6c68a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31c47315-c32b-450a-a36b-1f39cc944d59",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch Head",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de8789b1-fab3-4bec-9a5a-4864375d36ea",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch Chest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f15563bf-766e-4c2f-8190-89b32a528eed",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch Legs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc325e79-2bd7-463d-b416-6238c8f08a13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02a6ec2c-23a9-4fb5-b5a8-ed561d376d57",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84072f22-fd6a-4c12-8e90-b9c39b26f963",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectEastTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbd18226-f533-40ee-adf7-469477650039",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectWestTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f53c416-8f89-4d94-8127-80bc3af4b3af",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79475733-65bd-4f5f-9f71-47f85cb87244",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "7e4c663f-b8fc-42c9-96e8-aa2e66d01de7",
                    "path": "ButtonWithOneModifier",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthEastTool",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "18ea039f-f9a0-455f-8230-42f6edc40fb5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthEastTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "d78451ac-045b-4c86-8d78-9077d6de3393",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthEastTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button With One Modifier",
                    "id": "86f7e22c-d60f-4951-acb2-157f0590d9c9",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthWestTool",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "269f89d8-de57-4987-ae99-f3010f4b65cc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthWestTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "b4e44527-f806-4ebb-ad4e-b1cabce32042",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNorthWestTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button With One Modifier",
                    "id": "a7b504c0-d377-427c-aeed-77cc9e347ce2",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthEastTool",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "ee587512-b44a-4396-a20f-516c7dd14d6d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthEastTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "6f9e93c1-aaea-4b35-ba4e-5674301e3ba9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthEastTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button With One Modifier",
                    "id": "9d503340-4223-494a-a4a3-cec6a69e7abc",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthWestTool",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0cf21dac-441d-4ead-af1c-54363545279d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthWestTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "85393d89-e7db-4197-8acf-c0da275c224c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSouthWestTool",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "588ea3b6-64ad-49ae-b011-0268a2f7b9b6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "fc99d7da-ed0c-4359-9d7e-17429ba32dd9",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "48799a0f-0826-4d99-a46a-b53216af6c31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e58cc573-1dd8-47b7-a864-6959bd47e62f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}